// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typescript codeGeneration fragment spreads 1`] = `
"

/* tslint:disable */
// This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\",
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
}

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_friends = {
  __typename: \\"Human\\",
  name: string,
} | {
  __typename: \\"Droid\\",
  id: string,
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  name: string,
  id: string,
  homePlanet: ?string,
  friends: HeroName_hero_friends,
} | {
  __typename: \\"Droid\\",
  name: string,
  id: string,
  appearsIn: (?Episode)[],
};

export type HeroName = {
  hero: HeroName_hero
};

// ====================================================
// GraphQL fragment: humanFragment
// ====================================================

export type humanFragment_friends = {
  __typename: \\"Human\\",
  name: string,
} | {
  __typename: \\"Droid\\",
  id: string,
};

export type humanFragment = {
  __typename: \\"Human\\",
  homePlanet: ?string,
  friends: humanFragment_friends,
};

// ====================================================
// GraphQL fragment: droidFragment
// ====================================================

export type droidFragment = {
  __typename: \\"Droid\\",
  appearsIn: (?Episode)[],
};"
`;

exports[`Typescript codeGeneration inline fragments 1`] = `
"

/* tslint:disable */
// This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\",
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
}

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero_friends = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string,
};

export type HeroName_hero = {
  __typename: \\"Human\\",
  name: string,
  id: string,
  homePlanet: ?string,
  friends: HeroName_hero_friends,
} | {
  __typename: \\"Droid\\",
  name: string,
  id: string,
  appearsIn: (?Episode)[],
};

export type HeroName = {
  hero: HeroName_hero
};"
`;

exports[`Typescript codeGeneration should generate mutation operations with complex input types 1`] = `
"

/* tslint:disable */
// This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\",
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
}

// The input object sent when someone is creating a new review
type ReviewInput = {
  stars: number,
  commentary: ?string,
  favorite_color: ?ColorInput,
};

// The input object sent when passing in a color
type ColorInput = {
  red: number,
  green: number,
  blue: number,
};

// ====================================================
// GraphQL mutation operation: ReviewMovie
// ====================================================

export type ReviewMovie_createReview = {
  __typename: \\"Review\\",
  stars: number,
  commentary: ?string,
};

export type ReviewMovie = {
  createReview: ReviewMovie_createReview
};"
`;

exports[`Typescript codeGeneration simple hero query 1`] = `
"

/* tslint:disable */
// This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export enum Episode {
  NEWHOPE = \\"NEWHOPE\\",
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
}

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export type HeroName_hero = {
  __typename: \\"Human\\" | \\"Droid\\",
  name: string,
  id: string,
};

export type HeroName = {
  hero: HeroName_hero
};"
`;
